# sssnake

./: Cargo.toml  LICENSE  devbox.json  spawn_games.sh
rules/: default.nix  flake.nix  no-browser-patch.diff
src/: db.rs  lib.rs  main.rs  strategy.rs
