[package]
name = "sssnake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
crossbeam = "0.8.2"
dashmap = "5.5.3"
dfdx = { version = "0.13.0", features = ["cuda", "cudnn", "f16", "safetensors", "nightly"]}
serde = { version = "1.0.188", features = ["derive"] }
rand = "0.8.4"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "time", "macros"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
