[package]
name = "sssnake"
version = "0.1.0"
edition = "2021"

default-run = "sssnake"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["ws"] }
chrono = "0.4.31"
crossbeam = "0.8.2"
dashmap = "5.5.3"
dfdx = { version = "0.13.0", features = ["cuda", "cudnn", "f16", "safetensors", "nightly"]}
futures = "0.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
rusqlite = { version = "0.29.0", features = ["bundled"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "time", "macros"] }
tokio-tungstenite = { version = "0.20.1", features = ["rustls-tls-native-roots"] }
tungstenite = "0.20.1"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
